--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -4,7 +4,7 @@
 
 .post-container:hover {
   border-right: 1em solid #ffffff;
-  background-color: rgba(126, 126, 126, 0.2);
+  background-color: #F79C59;
   border-radius: 0.5em;
 }
 
