--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,9 +4,9 @@
     {{#each posts}}
       <div class="col-md-4">
         <div class="card mb-3">
-          <div class="card-header bg-warning">
+          <div class="card-header" style="background-color: #F79C59;">
             <h2 class="card-title">
-              <a href="/post/{{id}}" class="text-dark">{{title}}</a>
+              <a href="/post/{{id}}" class="text-light">{{title}}</a>
             </h2>
           </div>
           <div class="card-body text-dark">
