--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
   </head>
   <body class="bg-dark text-white">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
         <div class="container-fluid">
           <a class="navbar-brand fs-2" href="/">Kaitlyn's Tech Talk Blog</a>
           <button
@@ -53,7 +53,7 @@
     <div class="container" style="margin-bottom: 15vh;">
       {{{body}}}
     </div>
-<footer class="bg-dark text-white py-3" style="position: fixed; bottom: 0; width: 100%;">
+<footer class="bg-light text-black py-3" style="position: fixed; bottom: 0; width: 100%; background-color: #F79C59;">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 text-center">
