--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,8 +11,8 @@
     <div class="post-container post mb-3">
       <h2><a href="/post/{{id}}" class="text-decoration-none text-reset">{{title}}</a></h2>
       <p>Created by: {{user.username}} | Date: {{format_date createdAt}}</p>
-      <a href="/editpost/{{id}}" class="btn btn-warning">Edit Post</a>
-      <button class="btn btn-danger delete-post" data-post-id="{{id}}">Delete</button>
+      <a href="/editpost/{{id}}" class="btn" style="background-color: #F79C59;">Edit Post</a>
+      <button class="btn delete-post" data-post-id="{{id}}">Delete</button>
     </div>
   {{/each}}
 </main>
