--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <h1 class="mb-4">Dashboard</h1>
-      <a href="/newpost" class="btn btn-primary">Create a New Blog Post</a>
+      <a href="/newpost" class="btn text-dark" style="background-color: #FFFFFF;">Create a New Blog Post</a>
     </div>
   </div>
   <br>
@@ -11,8 +11,8 @@
     <div class="post-container post mb-3">
       <h2><a href="/post/{{id}}" class="text-decoration-none text-reset">{{title}}</a></h2>
       <p>Created by: {{user.username}} | Date: {{format_date createdAt}}</p>
-      <a href="/editpost/{{id}}" class="btn" style="background-color: #F79C59;">Edit Post</a>
-      <button class="btn delete-post" data-post-id="{{id}}">Delete</button>
+      <a href="/editpost/{{id}}" class="btn text-dark" style="background-color: #FFFFFF;">Edit Post</a>
+      <button class="btn delete-post" style="background-color: #FFFFFF;" data-post-id="{{id}}">Delete</button>
     </div>
   {{/each}}
 </main>
