--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -20,7 +20,7 @@
         placeholder="Enter post content"
       >{{content}}</textarea>
     </div>
-    <button type="submit" id="update-tech-post" class="btn btn-primary">Update Post</button>
-    <button type="button" id="delete-tech-post" class="btn btn-danger">Delete Post</button>
+    <button type="submit" id="update-tech-post" class="btn text-dark" style="background-color: #FFFFFF;">Update Post</button>
+    <button type="button" id="delete-tech-post" class="btn text-dark" style="background-color: #FFFFFF;">Delete Post</button>
   </form>
 </main>
