--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -16,7 +16,7 @@
           placeholder="Add a comment..."
         ></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn text-dark" style="background-color: #FFFFFF;">Submit</button>
     </form>
   {{/if}}
   <h2>Comment History:</h2>
