--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -23,6 +23,6 @@
         placeholder="Password must be over 8 characters long"
       />
     </div>
-    <button type="submit" class="btn btn-primary">Sign Up</button>
+    <button type="submit" class="btn text-dark" style="background-color: #FFFFFF;">Sign Up</button>
   </form>
 </main>
