--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -20,7 +20,7 @@
       ></textarea>
     </div>
     <div class="mb-3">
-      <button type="submit" class="btn btn-primary">Create Post</button>
+      <button type="submit" class="btn text-dark" style="background-color: #FFFFFF;">Create Post</button>
     </div>
   </form>
 </div>
