--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
         placeholder="Password"
       />
     </div>
-    <button type="submit" class="btn btn-primary">Log In</button>
+    <button type="submit" class="btn text-dark" style="background-color: #FFFFFF;">Log In</button>
   </form>
 
 </main>
